# test_task_rs

./: CMakeLists.txt  README.md
db/: computers.json
src/: Administration.cpp  Administration.h  Computer.h  UserInteraction.cpp  UserInteraction.h  main.cpp
